--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -33,7 +33,7 @@ body
           td johnbiden@gmail.com
           td 000-111-2222
           td
-            a.btn.btn--edit.text-primary(href="details.html") 
+            a.btn.btn--edit.text-primary(href="edit.html") 
               span
                 i.far.fa-edit
               span.ml-2 Chỉnh sửa
@@ -51,7 +51,7 @@ body
           td kimjongun@gmail.com
           td 000-111-3333
           td
-            a.btn.btn--edit.text-primary(href="details.html") 
+            a.btn.btn--edit.text-primary(href="edit.html") 
               span
                 i.far.fa-edit
               span.ml-2 Chỉnh sửa
@@ -69,7 +69,7 @@ body
           td vladimirputin@gmail.com
           td 000-111-4444
           td
-            a.btn.btn--edit.text-primary(href="details.html") 
+            a.btn.btn--edit.text-primary(href="edit.html") 
               span
                 i.far.fa-edit
               span.ml-2 Chỉnh sửa
