--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -33,7 +33,7 @@ body
           td 
           td 
           td
-            a.btn.btn--edit.text-primary(href="edit.html") 
+            a.btn.btn--edit.text-primary(href="#") 
               span
                 i.far.fa-edit
               span.ml-2 Chỉnh sửa
@@ -88,8 +88,11 @@ body
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
 
+    script.
+      $(".btn--edit").click(() => {
+        console.log(this);
+      });
+
     script(src="script.js")
-
-
 
             
