--- a/public/template/details.pug
+++ b/public/template/details.pug
@@ -72,7 +72,7 @@ body
       });
 
       $(".modal--back").click(() => {
-        location.replace("index.html");
+        //location.replace("index.html");
         $.post(
           "https://changable-list-test.herokuapp.com/users",
           {
