--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -25,73 +25,14 @@ body
           th Năm sinh
           th Email
           th Số điện thoại
-          th  
+          th &nbsp;
       tbody
-        tr.users
-          td 
-          td 
-          td 
-          td 
-          td
-            a.btn.btn--edit.text-primary(href="#") 
-              span
-                i.far.fa-edit
-              span.ml-2 Chỉnh sửa
-
-            span |
-
-            button.btn.btn--delete.text-danger
-              span
-                i.fas.fa-trash-alt
-              span.ml-2 Xóa
-
-        tr.users
-          td 
-          td 
-          td 
-          td 
-          td
-            a.btn.btn--edit.text-primary(href="edit.html") 
-              span
-                i.far.fa-edit
-              span.ml-2 Chỉnh sửa
-
-            span |
-
-            button.btn.btn--delete.text-danger 
-              span
-                i.fas.fa-trash-alt
-              span.ml-2 Xóa
-
-        tr.users
-          td 
-          td 
-          td 
-          td 
-          td
-            a.btn.btn--edit.text-primary(href="edit.html") 
-              span
-                i.far.fa-edit
-              span.ml-2 Chỉnh sửa
-
-            span |
-
-            button.btn.btn--delete.text-danger  
-              span
-                i.fas.fa-trash-alt
-              span.ml-2 Xóa
-
 
     script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
 
     script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
-
-    script.
-      $(".btn--edit").click(() => {
-        console.log(this);
-      });
 
     script(src="script.js")
 
