--- a/public/template/create.pug
+++ b/public/template/create.pug
@@ -64,6 +64,30 @@ body
     script.
 
       $("#save").click(() => {
+        $.post(
+          "https://changable-list-test.herokuapp.com/users",
+          {
+          "name": $("input")[0].value,
+          "birthday": $("input")[1].value,
+          "email": $("input")[2].value,
+          "phone": $("input")[3].value
+          }
+        ).done(function() {
+            $(".body-text").html(`
+              Thêm học viên ${$("input")[0].value} thành công!
+              <br>
+              Bạn có muốn quay về trang chủ?`
+            )
+          })
+      });
+
+      $(".modal--back").click(() => {
+        location.replace("index.html");
+      })
+
+
+    //
+      $("#save").click(() => {
         $(".body-text").html(`
         Thêm học viên mới ${$("input")[0].value} thành công!
         <br>
