--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -25,7 +25,9 @@ body
           th Năm sinh
           th Email
           th Số điện thoại
-          th &nbsp;
+          th Thao tác
+          th 
+            input(type="checkbox")
       tbody
 
     script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
@@ -36,4 +38,8 @@ body
 
     script(src="script.js")
 
+    script.
+      $(".btn--edit").css("text-transform", "uppercase")
+
+    
             
