--- a/public/index.css
+++ b/public/index.css
@@ -139,7 +139,7 @@ label span {
   color: red;
 }
 
-input {
+form input {
   width: 90%;
   height: 40px;
   padding-left: 10px;
@@ -149,4 +149,18 @@ input {
 
 .btn--delete:hover {
   color: rgb(105, 0, 0) !important;
+}
+
+th:nth-child(5) {
+  width: 250px;
+  max-width: 250px;
+}
+
+th:last-child {
+  width: 70px;
+  max-width: 250px;
+}
+
+.table td, .table th {
+  vertical-align: middle;
 }
