--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -13,7 +13,7 @@ body
   .container.d-flex.flex-column.justify-content-center.align-items-center.mt-5 
     h1.text-center Danh sách học viên
 
-    a.bg-success.align-self-start.btn.btn--add.my-5(href="create.html")
+    a.bg-success.align-self-start.btn.btn--add.my-4(href="create.html")
       span.text-light 
         i.fas.fa-plus-circle
       span.text-light.ml-2 Thêm học viên 
@@ -25,7 +25,9 @@ body
           th Năm sinh
           th Email
           th Số điện thoại
-          th Thao tác
+          th.text-center 
+            i.fas.fa-trash-alt.mr-2
+            | Xóa các mục được chọn
           th 
             input(type="checkbox")
       tbody
