--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -25,7 +25,7 @@ body
           th Năm sinh
           th Email
           th Số điện thoại
-          th.text-center 
+          th.text-center.btn--delete-selected 
             i.fas.fa-trash-alt.mr-2
             | Xóa các mục được chọn
           th 
