--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -19,7 +19,7 @@ body
             p.modal__text
 
           .modal-footer.d-flex.justify-content-center
-            a.btn.btn-success.modal--success(data-dismiss='modal') OK
+            a.btn.btn-success.modal--success(data-dismiss='modal') Xác nhận
             a.btn.btn-secondary.modal--cancel.ml-4(data-dismiss='modal') Hủy bỏ
 
     h1.text-center Danh sách học viên
