--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -81,7 +81,7 @@ body
           data: `name=${$("input")[0].value}&birthday=${$("input")[1].value}&email=${$("input")[2].value}&phone=${$("input")[3].value}`,
           success: function() {
             $(".body-text").html(`
-              Cập nhật học viên ${$("input")[0].value} thành công!
+              Cập nhật học viên <span class="bold-font">${$("input")[0].value}</span> thành công!
               <br>
               Bạn có muốn quay về trang chủ?`
             )
