--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -63,7 +63,8 @@ body
 
     script.
 
-      let userID = location.href.split("?")[1]
+      let userID = location.href.split("?")[1];
+      
       $.get(
         `https://changable-list-test.herokuapp.com/users/${userID}`,
         function(data) {
