--- a/public/template/create.pug
+++ b/public/template/create.pug
@@ -78,6 +78,7 @@ body
               <br>
               Bạn có muốn quay về trang chủ?`
             )
+            $("input").val("");
           })
       });
 
