--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -79,7 +79,13 @@ body
         $.ajax({
           type: "PUT",
           url: `https://changable-list-test.herokuapp.com/users/${userID}`,
-          data: `name=${$("input")[0].value}&birthday=${$("input")[1].value}&email=${$("input")[2].value}&phone=${$("input")[3].value}`,
+          data: {
+            name: `${$("input")[0].value}`,
+            birthday: `${$("input")[1].value}`,
+            email: `${$("input")[2].value}`,
+            phone: `${$("input")[3].value}`
+           },
+          //data: `name=${$("input")[0].value}&birthday=${$("input")[1].value}&email=${$("input")[2].value}&phone=${$("input")[3].value}`,
           success: function() {
             $(".body-text").html(`
               Cập nhật học viên <span class="bold-font">${$("input")[0].value}</span> thành công!
