--- a/public/template/create.pug
+++ b/public/template/create.pug
@@ -78,7 +78,9 @@ body
               <br>
               Bạn có muốn quay về trang chủ?`
             )
-            $("input").val("");
+            $(".modal--continue").click(() => {
+              $("input").val("")
+            })
           })
       });
 
