--- a/public/template/create.pug
+++ b/public/template/create.pug
@@ -16,8 +16,9 @@ body
         .modal-content
 
           .modal-body
-            p.body-text
-
+            .body-text
+              .spinner-border.mx-auto.d-block
+            
           .modal-footer.d-flex.justify-content-center
             button.btn.btn-success.modal--back.mr-4(type='button' data-dismiss='modal') Quay về trang chủ
             button.btn.btn-info.modal--continue(type='button' data-dismiss='modal') Thêm học viên khác
