--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -16,7 +16,8 @@ body
         .modal-content
 
           .modal-body
-            p.body-text
+            .body-text
+              .spinner-border.mx-auto.d-block
 
           .modal-footer.d-flex.justify-content-center
             button.btn.btn-success.modal--back.mr-4(type='button' data-dismiss='modal') Quay về trang chủ
