--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -23,9 +23,9 @@ body
             button.btn.btn-success.modal--back.mr-4(type='button' data-dismiss='modal') Quay về trang chủ
             button.btn.btn-info.modal--continue(type='button' data-dismiss='modal') Chỉnh sửa lại
 
-    h1.text-center Thêm mới học viên
+    h1.text-center Chỉnh sửa thông tin
 
-    form.w-100(action="")
+    form.main-form.w-100(action="")
       .form-group
         label(for="name") Họ tên 
           span *
