--- a/public/index.css
+++ b/public/index.css
@@ -118,6 +118,10 @@ h1 {
   font-weight: bold !important;
 }
 
+td .btn {
+  padding-left: 0px;
+}
+
 #index__modal .modal-content {
   border-radius: 8px;
   box-shadow: 0px 0px 15px rgb(255 255 255 / 40%);
@@ -127,12 +131,16 @@ h1 {
   min-width: 110px;
 }
 
-form {
+tbody tr:hover {
+  box-shadow: 2px 2px 5px #888888;
+}
+
+.main-form {
   padding: 0px;
   margin-top: 30px;
 }
 
-.form-group {
+.main-form .form-group {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
@@ -167,7 +175,7 @@ label span {
   color: red;
 }
 
-form input {
+.main-form input {
   width: 90%;
   height: 40px;
   padding-left: 10px;
@@ -204,6 +212,42 @@ table input {
   cursor: pointer;
   user-select: none;
 }
+
+.search-area {
+  width: 50%;
+  min-width: 200px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 30px auto 0px 0px
+}
+
+.search-area .input-group {
+  width: 80%;
+  border: 2px solid #bbbbbb;
+  border-radius: 8px;
+}
+
+.search-area .input-group-text {
+  padding-right: 0px;
+}
+
+.search-input:focus {
+  box-shadow: none;
+}
+
+.search-area .input-group-text, .search-input {
+  background-color: transparent;
+  border: none;
+  border-radius: 8px;
+}
+
+.search-submit {
+
+  border-radius: 8px;
+  height: 42px;
+}
+
 
 @media only screen and (min-width: 1200px) {
   body {
