--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -23,7 +23,8 @@ body
             button.btn.btn-success.modal--back.mr-4(type='button' data-dismiss='modal') Quay về trang chủ
             button.btn.btn-info.modal--continue(type='button' data-dismiss='modal') Chỉnh sửa lại
 
-    h1.text-center Chỉnh sửa thông tin
+    h1.text-center 
+      a(href="edit.html") Chỉnh sửa thông tin
 
     form.main-form.w-100(action="")
       .form-group
