--- a/public/index.css
+++ b/public/index.css
@@ -35,6 +35,10 @@ table {
   border-spacing: 0;
 }
 
+label {
+  margin: 0px;
+}
+
 html {
   scroll-behavior: smooth;
   font-size: 62.5%;
@@ -116,7 +120,7 @@ input[type=checkbox] {
   width: 100vw;
   height: 100vh;
   top: 0px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
   z-index: 10000;
 }
 
@@ -124,8 +128,18 @@ input[type=checkbox] {
   position: absolute;
   left: 49%;
   left: calc(50% - 24px);
-  top: 49px;
+  top: 49%;
   top: calc(50% - 24px);
+}
+
+.loading-wrapper .loading__text {
+  position: absolute;
+  font-size: 18px;
+  font-weight: bold !important;
+  left: 49%;
+  left: calc(50% - 100px);
+  top: 56%;
+  top: calc(57% - 24px);
 }
 
 *:not(i, .close, h1) {
@@ -138,7 +152,7 @@ input[type=checkbox] {
   font-weight: bold !important;
 }
 
-h1 {
+h1, h1.text-center a {
   font-size: 32px !important;
   font-weight: bold !important;
 }
@@ -162,7 +176,11 @@ tbody tr {
 
 tbody tr:hover {
   box-shadow: 3px 3px 8px #888888;
-  transform: scaleX(1.005);
+  transform: scaleX(1.01);
+}
+
+tbody tr:hover .checkbox-wrapper {
+  transform: translate(5px, 0px);
 }
 
 .main-form {
@@ -190,7 +208,7 @@ table input {
   left: 13px;
 }
 
-label {
+label:not(.gender-label) {
   width: 10%;
   margin: 0px;
 }
@@ -199,7 +217,20 @@ label span {
   color: red;
 }
 
-.main-form input {
+.gender-label, .gender-input {
+  margin: 0px;
+  cursor: pointer;
+}
+
+.gender-label:nth-child(2), .gender-label:nth-child(4) {
+  padding: 8px 10px 8px 0px;
+}
+
+.gender-label:nth-child(4) {
+  margin-left: 30px;
+}
+
+.main-form input:not([type=radio]) {
   width: 90%;
   height: 40px;
   padding-left: 10px;
@@ -225,10 +256,10 @@ th:first-child {
 }
 
 table input {
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   position: relative;
-  top: 5px
+  top: 4px;
 }
 
 .thead-dark th:nth-child(5) {
@@ -299,7 +330,10 @@ table input {
 .page-link:hover, .page-item.active .page-link {
   background-color: #000;
   color: #fff;
-  border: black;
+}
+
+.page-item.active .page-link {
+  border-color: #bbbbbb;
 }
 
 .page-item.btn {
