--- a/public/index.css
+++ b/public/index.css
@@ -143,8 +143,8 @@ input[type=checkbox] {
 }
 
 *:not(i, .close, h1) {
-  font-size: 16px !important;
-  font-weight: 500 !important;
+  font-size: 16px;
+  font-weight: 500;
   transition: all 0.3s;
 }
 
@@ -327,6 +327,15 @@ table input {
   border-color: #bbbbbb;
 }
 
+.modal-sm {
+  max-width: 230px;
+}
+
+.choose-page__input {
+  width: 50px;
+  padding-left: 10px;
+}
+
 .page-link:hover, .page-item.active .page-link {
   background-color: #000;
   color: #fff;
@@ -342,6 +351,23 @@ table input {
   border: none;
 }
 
+.custom-pagination {
+  width: 50%;
+  max-width: 360px;
+}
+
+.custom-pagination__item {
+  background-color: #f1f1f1;
+  width: 40px;
+  height: 40px;
+  font-size: 22px !important;
+  padding: 0px 5px;
+}
+
+.custom-pagination__item:hover {
+  background-color: #000;
+  color: #fff;
+}
 
 
 @media only screen and (min-width: 1200px) {
@@ -351,5 +377,9 @@ table input {
 
   body.modal-open {
     padding-right: 0px !important;
+  }
+
+  .btn--add {
+    margin-left: 77px;
   }
 }
