--- a/public/template/edit.pug
+++ b/public/template/edit.pug
@@ -28,21 +28,30 @@ body
 
     form.main-form.w-100(action="")
       .form-group
-        label(for="name") Họ tên 
+        label(for="input__name") Họ tên 
           span *
         input#input__name(type="text") 
 
       .form-group 
-        label(for="name") Năm sinh 
-        input#input__dob(type="text") 
+        label(for="input__birthday") Năm sinh 
+        input#input__birthday(type="text")
 
       .form-group 
-        label(for="name") Email 
+        label(for="") Giới tính
+
+        label.gender-label(for="input__gender--male") Nam
+        input#input__gender--male.gender-input(type="radio" name="gender" value="Nam") 
+
+        label.gender-label(for="input__gender--female") Nữ
+        input#input__gender--female.gender-input(type="radio" name="gender" value="Nữ")
+
+      .form-group 
+        label(for="input__email") Email 
           span *
         input#input__email(type="text") 
 
       .form-group 
-        label(for="name") Phone 
+        label(for="input__phone") Phone 
           span *
         input#input__phone(type="text")
 
@@ -73,26 +82,42 @@ body
         `https://changable-list-test.herokuapp.com/users/${userID}`,
         function(data) {
           $("input")[0].value = data.name;
-          $("input")[1].value = data.birthday.substr(-4);
-          $("input")[2].value = data.email;
-          $("input")[3].value = data.phone;
+          $("input")[1].value = data.birthday;
+          if (data.gender == "Nam") {
+            $("#input__gender--male").prop("checked", true)
+          } else {
+            $("#input__gender--female").prop("checked", true)
+          }
+          $("input")[4].value = data.email;
+          $("input")[5].value = data.phone;
         }
       )
+
+      let gender;
+
+      $(".gender-input").click(() => {
+        if($("#input__gender--male").is(":checked")) {
+          gender = "Nam"
+        } else {
+          gender = "Nữ"
+        }
+      });
 
       $("#save").click(() => {
         $.ajax({
           type: "PUT",
           url: `https://changable-list-test.herokuapp.com/users/${userID}`,
           data: {
-            name: `${$("input")[0].value}`,
-            birthday: `${$("input")[1].value}`,
-            email: `${$("input")[2].value}`,
-            phone: `${$("input")[3].value}`
-           },
+            "name": $("input")[0].value,
+            "birthday": $("input")[1].value,
+            "gender": gender,
+            "email": $("input")[4].value,
+            "phone": $("input")[5].value
+          },
           //data: `name=${$("input")[0].value}&birthday=${$("input")[1].value}&email=${$("input")[2].value}&phone=${$("input")[3].value}`,
           success: function() {
             $(".body-text").html(`
-              Cập nhật học viên <span class="bold-font">${$("input")[0].value}</span> thành công!
+              Cập nhật hội viên <span class="bold-font">${$("input")[0].value}</span> thành công!
               <br>
               Bạn có muốn quay về trang chủ?`
             )
