--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -49,6 +49,8 @@ body
       button.search-submit.btn.btn-outline-dark(type="button") 
         i.fas.fa-search
 
+    p.search__result.text-center 
+
     .buttons-wrapper.d-flex.justify-content-center.w-100 
       a.bg-danger.align-self-start.btn.btn--delete-selected.my-4.disabled(data-toggle="modal" data-target="#index__modal" data-backdrop="static" data-keyboard="false")
         span.text-light
