--- a/public/template/index.pug
+++ b/public/template/index.pug
@@ -11,113 +11,29 @@ head
 
 body
 
-  .loading-wrapper
-    .spinner-border.text-primary.loading
-    p.loading__text Vui lòng đợi trong giây lát
+  .index-wrapper.flex-column.justify-content-center.align-items-center.mx-auto 
 
-  .page-wrapper.container.flex-column.justify-content-center.align-items-center.mt-5.px-0 
-    button#check-btn(type = "button") Check!
-
-    #index__modal.modal.fade
-      .modal-dialog
-        .modal-content
-
-          .modal-body
-            p.modal__text
-
-          .modal-footer.d-flex.justify-content-center
-            a.btn.btn-success.modal--success(data-dismiss='modal') Xác nhận
-            a.btn.btn-secondary.modal--cancel.ml-4(data-dismiss='modal') Hủy bỏ
-
-    #choose-page__modal.modal.fade
-      .modal-dialog.modal-dialog-centered.modal-sm
-        .modal-content
-
-          .modal-body
-            p.choose-page__text.text-center Nhập số trang
-            input.choose-page__input.d-block.mx-auto.mt-3(type="number")
-
-          .modal-footer.d-flex.justify-content-center
-            a.btn.btn-success.choose-page__confirm(data-dismiss='modal') Xác nhận
-            a.btn.btn-secondary.choose-page__cancel.ml-3(data-dismiss='modal') Hủy bỏ
-
-    h1.text-center 
-      a(href="index.html") Danh sách hội viên
-
-    form.search-area(action="")
-      input.form-control.search-input(type='text' placeholder='Tìm theo tên, năm sinh...')
-        
-      button.search-submit.btn.btn-outline-dark(type="button") 
-        i.fas.fa-search
-
-    p.search__result.text-center
+    h1.text-center.mb-4 
+      a(href="index.html") Đăng nhập
     
-     
+    form.login-form.d-flex.flex-column.align-items-center(action="")
+      .input-group
+        label(for="email-input") Email
+        input#email-input(type="text")
+      .input-group
+        label(for="password-input") Mật khẩu
+        input#password-input(type="text")
+      .input-group.d-flex.justify-content-center
+        a.btn.btn-success.login-confirm Xác nhận
 
-    .buttons-wrapper.d-flex.justify-content-center.w-100 
-      a.bg-danger.align-self-start.btn.btn--delete-selected.my-4.disabled(data-toggle="modal" data-target="#index__modal" data-backdrop="static" data-keyboard="false")
-        span.text-light
-          i.fas.fa-trash-alt.mr-2
-        span.text-light.ml-2 Xóa các mục được chọn
+  script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
 
-      .custom-pagination.d-flex.justify-content-between.align-items-center.mx-auto 
-        button.custom-pagination__item.btn.first-page
-          i.fas.fa-angle-double-left
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
 
-        button.custom-pagination__item.btn.prev-page
-          i.fas.fa-angle-left
-          
-        p.custom-pagination__display-text
+  script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
 
-        button.custom-pagination__item.btn.next-page
-          i.fas.fa-angle-right
+  script(src="script.js")
 
-        button.custom-pagination__item.btn.last-page
-          i.fas.fa-angle-double-right
-
-      a.bg-success.align-self-start.btn.btn--add.my-4(href="create.html")
-        span.text-light 
-          i.fas.fa-plus-circle
-        span.text-light.ml-2 Thêm hội viên
-
-    table.table.table-striped.mb-4
-      thead.thead-dark
-        tr.table-head
-          th 
-            input(type="checkbox")
-          th Họ tên
-          th Ngày sinh 
-          th Giới tính
-          th Email
-          th Số điện thoại
-          th Thao tác
-          
-      tbody
-  
-    .custom-pagination.d-flex.justify-content-between.align-items-center.mx-auto 
-      button.custom-pagination__item.btn.first-page
-        i.fas.fa-angle-double-left
-
-      button.custom-pagination__item.btn.prev-page
-        i.fas.fa-angle-left
-        
-      p.custom-pagination__display-text
-
-      button.custom-pagination__item.btn.next-page
-        i.fas.fa-angle-right
-
-      button.custom-pagination__item.btn.last-page
-        i.fas.fa-angle-double-right
-
-    script(src='https://kit.fontawesome.com/d8c5e3f38e.js' crossorigin='anonymous')
-
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js')
-
-    script(src='https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js' integrity='sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns' crossorigin='anonymous')
-
-    script(src="script.js")
-
-    script(src="index.js")
 
       
 
