--- a/public/index.css
+++ b/public/index.css
@@ -382,8 +382,6 @@ table input {
   margin-top: 100px;
 }
 
-
-
 .index-wrapper .input-group {
   display: flex;
   justify-content: space-between;
@@ -402,6 +400,34 @@ table input {
   width: 75%;
 }
 
+.login-modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0px;
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.login-modal__body {
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 20px;
+  margin-top: 15vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal--active {
+  visibility: visible;
+  opacity: 1;
+}
 
 @media only screen and (min-width: 1200px) {
   body {
